@@ -1094,3 +1094,5 @@
 2025-09-02 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'libreoffice-calc' dependency to the 'davit-gui' DEB
 	package.
+2025-09-03 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed generation errors for various reports in davit(1).
